5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1800_2566.log
== TEST (2019-06-05 18:52:47) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(6,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i==5]):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=x[0]*10
	x[1]=x[1]*10
	x[2]=x[2]*10
	x[3]=x[3]*10
	x[4]=x[4]*10
	x[5]=x[5]*10
	x[6]=x[6]*10
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 18:53:48) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(6,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=x[0]*10
	x[1]=x[1]*10
	x[2]=x[2]*10
	x[3]=x[3]*10
	x[4]=x[4]*10
	x[5]=x[5]*10
	x[6]=x[6]*10
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 18:55:02) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=x[0]*10
	x[1]=x[1]*10
	x[2]=x[2]*10
	x[3]=x[3]*10
	x[4]=x[4]*10
	x[5]=x[5]*10
	x[6]=x[6]*10
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:34:52) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=x[0]*10
	x[1]=x[1]*10
	x[2]=x[2]*10
	x[3]=x[3]*10
	x[4]=x[4]*10
	x[5]=x[5]*10
	x[6]=x[6]*10
print(round(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:35:24) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=x[0]*10
	x[1]=x[1]*10
	x[2]=x[2]*10
	x[3]=x[3]*10
	x[4]=x[4]*10
	x[5]=x[5]*10
	x[6]=x[6]*10
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:46:30) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/10)*100,1)
	x[1]=round((x[1]/10)*100,1)
	x[2]=round((x[2]/10)*100,1)
	x[3]=round((x[3]/10)*100,1)
	x[4]=round((x[4]/10)*100,1)
	x[5]=round((x[5]/10)*100,1)
	x[6]=round((x[6]/10)*100,1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:47:05) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/10)*100,1)
	x[1]=round((x[1]/10)*100,1)
	x[2]=round((x[2]/10)*100,1)
	x[3]=round((x[3]/10)*100,1)
	x[4]=round((x[4]/10)*100,1)
	x[5]=round((x[5]/10)*100,1)
	x[6]=round((x[6]/10)*100,1)
print(x)
-- EXECUTION TIME:
1.01156
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30000000        0        0        0 30000000 40000000 60000000]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10000000 20000000        0 40000000 50000000 50000000 80000000]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20000000 10000000        0 30000000 10000000 20000000 40000000]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:48:20) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/10)*100,1)
	x[1]=round((x[1]/10)*100,1)
	x[2]=round((x[2]/10)*100,1)
	x[3]=round((x[3]/10)*100,1)
	x[4]=round((x[4]/10)*100,1)
	x[5]=round((x[5]/10)*100,1)
	x[6]=round((x[6]/10)*100,1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:50:40) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f)),1)
	x[1]=round((x[1]/10),1)
	x[2]=round((x[2]/10),1)
	x[3]=round((x[3]/10),1)
	x[4]=round((x[4]/10)*100,1)
	x[5]=round((x[5]/10)*100,1)
	x[6]=round((x[6]/10)*100,1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:54:17) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f)*100),1)
	x[1]=round((x[1]/size(f)*100),1)
	x[2]=round((x[2]/size(f)*100),1)
	x[3]=round((x[3]/size(f)*100),1)
	x[4]=round((x[4]/size(f)*100),1)
	x[5]=round((x[5]/size(f)*100),1)
	x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:55:06) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f)),1)
	x[1]=round((x[1]/size(f)),1)
	x[2]=round((x[2]/size(f)),1)
	x[3]=round((x[3]/size(f)),1)
	x[4]=round((x[4]/size(f)),1)
	x[5]=round((x[5]/size(f)),1)
	x[6]=round((x[6]/size(f)),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:56:45) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f)*10),1)
	x[1]=round((x[1]/size(f)*10),1)
	x[2]=round((x[2]/size(f)*10),1)
	x[3]=round((x[3]/size(f)*10),1)
	x[4]=round((x[4]/size(f)*10),1)
	x[5]=round((x[5]/size(f)*10),1)
	x[6]=round((x[6]/size(f)*10),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:57:54) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f)*100),1)
	x[1]=round((x[1]/size(f)*100),1)
	x[2]=round((x[2]/size(f)*100),1)
	x[3]=round((x[3]/size(f)*100),1)
	x[4]=round((x[4]/size(f)*100),1)
	x[5]=round((x[5]/size(f)*100),1)
	x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:58:29) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round(((x[0]/size(f))*100),1)
	x[1]=round((x[1]/size(f)*100),1)
	x[2]=round((x[2]/size(f)*100),1)
	x[3]=round((x[3]/size(f)*100),1)
	x[4]=round((x[4]/size(f)*100),1)
	x[5]=round((x[5]/size(f)*100),1)
	x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:00:02) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f))*100,1)
	x[1]=round((x[1]/size(f)*100),1)
	x[2]=round((x[2]/size(f)*100),1)
	x[3]=round((x[3]/size(f)*100),1)
	x[4]=round((x[4]/size(f)*100),1)
	x[5]=round((x[5]/size(f)*100),1)
	x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:00:24) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f))*10,1)
	x[1]=round((x[1]/size(f)*100),1)
	x[2]=round((x[2]/size(f)*100),1)
	x[3]=round((x[3]/size(f)*100),1)
	x[4]=round((x[4]/size(f)*100),1)
	x[5]=round((x[5]/size(f)*100),1)
	x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:08:26) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f))*10,1)
	x[1]=round((x[1]/size(f)*100),1)
	x[2]=round((x[2]/size(f)*100),1)
	x[3]=round((x[3]/size(f)*100),1)
	x[4]=round((x[4]/size(f)*100),1)
	x[5]=round((x[5]/size(f)*100),1)
	x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:09:13) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f))*100,1)
	x[1]=round(((x[1]/size(f))*100),1)
	x[2]=round((x[2]/size(f)*100),1)
	x[3]=round((x[3]/size(f)*100),1)
	x[4]=round((x[4]/size(f)*100),1)
	x[5]=round((x[5]/size(f)*100),1)
	x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:10:55) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7,dtype=int)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
#for i in range(size(x)):
	#x[0]=round((x[0]/size(f))*100,1)
	#x[1]=round(((x[1]/size(f))*100),1)
	#x[2]=round((x[2]/size(f)*100),1)
	#x[3]=round((x[3]/size(f)*100),1)
	#x[4]=round((x[4]/size(f)*100),1)
	#x[5]=round((x[5]/size(f)*100),1)
	#x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:15:25) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[0]=round((x[0]/size(f))*100,1)
	x[1]=round(((x[1]/size(f))*100),1)
	x[2]=round((x[2]/size(f)*100),1)
	x[3]=round((x[3]/size(f)*100),1)
	x[4]=round((x[4]/size(f)*100),1)
	x[5]=round((x[5]/size(f)*100),1)
	x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:18:09) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
#for i in range(size(x)):
	x[0]=round((x[0]/size(f))*100,1)
	x[1]=round(((x[1]/size(f))*100),1)
	x[2]=round((x[2]/size(f)*100),1)
	x[3]=round((x[3]/size(f)*100),1)
	x[4]=round((x[4]/size(f)*100),1)
	x[5]=round((x[5]/size(f)*100),1)
	x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:18:58) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
#for i in range(size(x)):
x[0]=round((x[0]/size(f))*100,1)
x[1]=round(((x[1]/size(f))*100),1)
x[2]=round((x[2]/size(f)*100),1)
x[3]=round((x[3]/size(f)*100),1)
x[4]=round((x[4]/size(f)*100),1)
x[5]=round((x[5]/size(f)*100),1)
x[6]=round((x[6]/size(f)*100),1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:08) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
x[i]=round((x[i]/size(f))*100,1)
print(x)
-- ERROR:
File "XXXX", line 18
    x[i]=round((x[i]/size(f))*100,1)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:16) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[i]=round((x[i]/size(f))*100,1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:20:33) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[i]=round((x[i]/size(f))*100,1)
print(x)
-- EXECUTION TIME:
0.844459
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8.  0. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7  0.  23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:55) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[i]=round((x[i]/size(f))*100,1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:22:12) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(7)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[i]=round((x[i]/size(f))*100,1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:22:53) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(6)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
	elif(f[i]==7):
		x[6]=x[6]+1
for i in range(size(x)):
	x[i]=round((x[i]/size(f))*100,1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:24:58) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(6)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
	
for i in range(size(x)):
	x[i]=round((x[i]/size(f))*100,1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:25:19) 
-- CODE:
from numpy import*
f=array(eval(input("digite as faltas: ")))
x=zeros(6)
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
	
for i in range(size(x)):
	x[i]=round((x[i]/size(f))*100,1)
print(x)
-- EXECUTION TIME:
1.10212
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
